hadoop installation post complete